fix gap in timeline item

--- a/src/components/molecules/TimelineItem/TimelineItem.css
+++ b/src/components/molecules/TimelineItem/TimelineItem.css
@@ -35,6 +35,7 @@
    color: var(--color-text-low-contrast);
    @media (width >= 704px) {
     flex-direction: column;
+    gap: initial;
    }
   }
 
